(feature) addresses are returned by a query object
- introduce a new type of object: queries, responsible for fetching
data. We expect to have a number of these
- for now have this just return the hardcoded data

NB: This commit originally added `app/queries` to the eager loaded path,
which is not actually needed in Rails 5 and above:

> config.eager_load_paths accepts an array of paths from which Rails
> will eager load on boot if cache classes is enabled. Defaults to every
> folder in the app directory of the application.

http://edgeguides.rubyonrails.org/configuring.html#rails-general-configuration

--- a/app/views/address_searches/show.html.haml
+++ b/app/views/address_searches/show.html.haml
@@ -4,5 +4,5 @@
 
 = simple_form_for @address, method: :put do |f|
   #address-search-results
-    = f.collection_radio_buttons :address, [['P01234', 'Flat 1, 8 Hoxton Square, N1 6NU']], :first, :last
+    = f.collection_radio_buttons :address, @address_search_results, :first, :last
     = f.button :submit
