--- a/app/views/address_searches/show.html.haml
+++ b/app/views/address_searches/show.html.haml
@@ -4,5 +4,5 @@
 
 = simple_form_for @address, method: :put do |f|
   #address-search-results
-    = f.collection_radio_buttons :address, @address_search_results, :first, :last
+    = f.collection_radio_buttons :address, @address_search_results, :property_reference, :short_address
     = f.button :submit
