--- a/app/views/address_searches/show.html.haml
+++ b/app/views/address_searches/show.html.haml
@@ -2,7 +2,8 @@
   = f.input :postcode
   = f.button :submit
 
-= simple_form_for @address, method: :put do |f|
-  #address-search-results
-    = f.collection_radio_buttons :address, @address_search_results, :property_reference, :short_address
-    = f.button :submit
+- unless @first_visit
+  = simple_form_for @address, method: :put do |f|
+    #address-search-results
+      = f.collection_radio_buttons :address, @address_search_results, :property_reference, :short_address
+      = f.button :submit
