(feature) display a message when no results found
I'm assuming that we'll want the same 'address_search_results' div
whether or not there are actually results. That might not be right.

--- a/app/views/address_searches/show.html.haml
+++ b/app/views/address_searches/show.html.haml
@@ -3,7 +3,10 @@
   = f.button :submit
 
 - unless @first_visit
-  = simple_form_for @address, method: :put do |f|
-    #address-search-results
-      = f.collection_radio_buttons :property_reference, @address_search_results, :property_reference, :short_address
-      = f.button :submit
+  #address-search-results
+    - if @address_search_results.any?
+      = simple_form_for @address, method: :put do |f|
+        = f.collection_radio_buttons :property_reference, @address_search_results, :property_reference, :short_address
+        = f.button :submit
+    - else
+      = t('address_search.not_found')
