--- a/app/views/address_searches/show.html.haml
+++ b/app/views/address_searches/show.html.haml
@@ -1,8 +1,11 @@
+- if @address_search.errors
+  = @address_search.errors.full_messages.join(', ')
+
 = simple_form_for @address_search, url: address_search_path, method: :get do |f|
   = f.input :postcode
   = f.button :submit
 
-- unless @first_visit
+- if @show_results
   #address-search-results
     - if @address_search_results.any?
       = simple_form_for @address, method: :put do |f|
