--- a/app/views/address_searches/show.html.haml
+++ b/app/views/address_searches/show.html.haml
@@ -1,11 +1,11 @@
 - if @address_search.errors
   = @address_search.errors.full_messages.join(', ')
 
-= simple_form_for @address_search, url: address_search_path, method: :get do |f|
-  = f.input :postcode
-  = f.button :submit
-
 - if @show_results
+  = simple_form_for @address_search, url: address_search_path, method: :get do |f|
+    = @address_search.postcode
+    = f.button :submit, 'Change'
+
   #address-search-results
     - if @address_search_results.any?
       = simple_form_for @address, method: :put do |f|
@@ -13,3 +13,8 @@
         = f.button :submit
     - else
       = t('address_search.not_found')
+- else
+  = simple_form_for @address_search, url: address_search_path, method: :get do |f|
+    = f.input :postcode
+    = f.button :submit
+
