--- a/app/views/address_searches/show.html.haml
+++ b/app/views/address_searches/show.html.haml
@@ -1,20 +1,7 @@
 - if @address_search.errors
   = @address_search.errors.full_messages.join(', ')
 
-- if @show_results
-  = simple_form_for @address_search, url: address_search_path, method: :get do |f|
-    = @address_search.postcode
-    = f.button :submit, 'Change'
-
-  #address-search-results
-    - if @address_search_results.any?
-      = simple_form_for @address, method: :put do |f|
-        = f.collection_radio_buttons :property_reference, @address_search_results, :property_reference, :short_address
-        = f.button :submit
-    - else
-      = t('address_search.not_found')
-- else
-  = simple_form_for @address_search, url: address_search_path, method: :get do |f|
-    = f.input :postcode
-    = f.button :submit
+= simple_form_for @address_search, url: address_search_path, method: :put do |f|
+  = f.input :postcode
+  = f.button :submit
 
