--- a/app/views/address_searches/update.html.haml
+++ b/app/views/address_searches/update.html.haml
@@ -3,7 +3,7 @@
 
 = simple_form_for @address_search, url: address_search_path, method: :get do |f|
   = @address_search.postcode
-  = f.button :submit, 'Change'
+  = f.button :submit, t('address_search.change')
 
 - if @address_search_results
   #address-search-results
