(feature) Redirect back to search form if no address selected

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,6 +18,8 @@
 
     %main
       #content{ role: 'main' }
+        - flash.each do |key, value|
+          = content_tag :div, value, class: "flash flash-#{key}"
         = yield
 
     %footer
