(feature) Site looks like hybrid of Hackney and GDS
Apply some basic styling to the start page, using the GDS frontend
toolkit and elements and some of the Hackney branding.

I've also converted the application layout to HAML format.

--- a/app/views/start/index.html.haml
+++ b/app/views/start/index.html.haml
@@ -1,5 +1,5 @@
 .grid-row
-  %h1.heading-large
+  %h1
     Maintain my home
 
   %p.lede
@@ -12,8 +12,7 @@
     Requesting a repair should take around 5 minutes.
 
   %p
-    %button.button.button-start
-      Start
+    %a.button.button-start{ href: '/address_search/' } Start
 
   %aside
     %div.notice
