--- a/app/views/address_searches/new.html.haml
+++ b/app/views/address_searches/new.html.haml
@@ -1,7 +1,7 @@
 - if @address_search.errors
   = @address_search.errors.full_messages.join(', ')
 
-= simple_form_for @address_search, url: address_search_path, method: :put do |f|
+= simple_form_for @address_search, url: address_search_path do |f|
   = f.input :postcode
   = f.button :submit
 
