(chore) The service's start page links to the first question

--- a/app/views/start/index.html.haml
+++ b/app/views/start/index.html.haml
@@ -12,7 +12,7 @@
     Requesting a repair should take around 5 minutes.
 
   %p
-    %a.button.button-start{ href: '/address_search/' } Start
+    %a.button.button-start{ href: '/questions/start/' } Start
 
   %aside
     %div.notice
