(feature) Implement the first question
Show users the first question and two possible answers. Depending
on the chosen answer, the user is either redirected to the emergency
contacts page, or shown the next question (currently, faked in
view of `Questions::StartController#submit`).

In the case where the form is submitted without choosing an option, the
users are shown a warning message and the form is redisplayed.

--- a/app/views/questions/start/index.html.haml
+++ b/app/views/questions/start/index.html.haml
@@ -13,5 +13,5 @@
 
 .answers
   = simple_form_for @form, url: questions_start_submit_path do |f|
-    = f.input :priority_repair, collection: [:yes, :no], as: :radio_buttons
-    = f.button :submit
+    = f.input :priority_repair, collection: [:yes, :no], as: :radio_buttons, label: ''
+    = f.button :submit, class: 'button'
