(chore) Use SimpleForm's 'input' to render radio buttons
Replace SimpleForm's `collection_radio_buttons` with the more high-level
`input` method which adds additional class names to the resulting HTML
markup, so that it can be styled correctly.

Additionally, add the 'button' class on the submit button.

NB: The GOVUK radio buttons don't work properly with
Capybara/Poltergeist tests because the styling hides the real form
control. Capybara can't click on hidden elements. Because of this, I've
changed the approach to click the associated label element instead.

To DRY this up, I created a capybara helper module which is included in
all feature specs.

--- a/app/views/address_searches/create.html.haml
+++ b/app/views/address_searches/create.html.haml
@@ -9,8 +9,14 @@
   #address-search-results
     - if @address_search_results.any?
       = simple_form_for @address, url: address_path do |f|
-        = f.collection_radio_buttons :property_reference, @address_search_results, :property_reference, :short_address
-        = f.button :submit
+        = f.input :property_reference,
+          as: :radio_buttons,
+          collection: @address_search_results,
+          label_method: :short_address,
+          value_method: :property_reference,
+          label: false
+
+        = f.button :submit, class: 'button'
     - else
       = t('address_search.not_found')
 
