(chore) Style additional form elements
 - Add GOVUK styling to textarea and input elements
 - Reduce font size of headings to improve page balance

--- a/app/assets/stylesheets/hackney.scss
+++ b/app/assets/stylesheets/hackney.scss
@@ -65,14 +65,14 @@ main {
   }
 
   h1 {
-    @include heading-48;
+    @include heading-36;
 
     color: $hackney-green;
     font-weight: bold;
   }
 
   h2 {
-    @include heading-36;
+    @include heading-24;
   }
 
   ul {
@@ -86,6 +86,14 @@ main {
 
   .radio {
     @extend .multiple-choice;
+  }
+
+  textarea.text {
+    @extend .form-control;
+  }
+
+  input.string {
+    @extend .form-control;
   }
 
   .button {
