(feature) Style service title
Display the name of the service next to the Hackney logo in the header.

--- a/app/assets/stylesheets/hackney.scss
+++ b/app/assets/stylesheets/hackney.scss
@@ -26,15 +26,29 @@ header {
 
   h1 {
     background: asset-url('logo.png') 0 0 no-repeat;
+    display: inline-block;
     height: 54px;
     overflow: hidden;
     text-indent: 100%;
+    vertical-align: middle;
     white-space: nowrap;
     width: 300px;
   }
 
   a {
     color: $white;
+    text-decoration: none;
+  }
+
+  h2 {
+    @include heading-24;
+    display: inline-block;
+    margin-left: 1em;
+    vertical-align: middle;
+
+    @include media(mobile) {
+      margin-left: 0;
+    }
   }
 }
 
