--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,39 +11,6 @@
  * It is generally better to create a new file per style scope.
  *
  *= require_self
- *= require_tree .
+ *= require hackney
  */
 
-@import 'variables';
-
-/* From GDS's alphagov/govuk_frontend_toolkit */
-@import 'font_stack';
-@import 'measurements';
-@import 'conditionals';
-@import 'device-pixels';
-@import 'grid_layout';
-@import 'typography';
-@import 'shims';
-
-@import 'design-patterns/alpha-beta';
-@import 'design-patterns/buttons';
-@import 'design-patterns/breadcrumbs';
-
-/* From GDS's alphagov/govuk_elements */
-@import 'elements/helpers';
-@import 'elements/reset';
-@import 'elements/layout';
-@import 'elements/elements-typography';
-@import 'elements/buttons';
-@import 'elements/icons';
-@import 'elements/lists';
-// @import 'elements/tables';
-// @import 'elements/details';
-// @import 'elements/panels';
-@import 'elements/forms';
-@import 'elements/forms/form-multiple-choice';
-// @import 'elements/forms/form-date';
-@import 'elements/forms/form-validation';
-@import 'elements/breadcrumbs';
-@import 'elements/phase-banner';
-@import 'elements/components';
