--- a/app/views/address_searches/new.html.haml
+++ b/app/views/address_searches/new.html.haml
@@ -1,7 +1,11 @@
+%h1
+  What is your address?
+
 - if @address_search.errors
   = @address_search.errors.full_messages.join(', ')
 
 = simple_form_for @address_search, url: address_search_path do |f|
-  = f.input :postcode
-  = f.button :submit
+  %fieldset
+    = f.input :postcode
+    = f.button :submit, class: 'button'
 
