--- a/app/views/questions/start/index.html.haml
+++ b/app/views/questions/start/index.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for @form, url: questions_start_submit_path do |f|
+= simple_form_for @form, url: request.fullpath do |f|
   %fieldset
     %legend.question
       %h1 Is your problem one of these?
