(feature) Make site behave better on mobile
 - Remove erroneous `<div>` around content on the service front page. This
   was causing content to touch the sides of the browser, rather than
   being surrounded by a margin.
 - Add `<meta>` tags for mobile viewport resizing and IE compatibility.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,10 +5,15 @@
     %title
       = t('title')
 
+    %meta{ name: 'viewport', content: 'width=device-width, initial-scale=1' }/
+    %meta{ 'http-equiv': 'x-ua-compatible', content: 'ie-edge' }/
+
     = csrf_meta_tags
     %link{ href: 'https://fonts.googleapis.com/css?family=Droid+Sans:400,700', rel: 'stylesheet' }/
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
+
+
 
   %body
     %header
