(chore) Use hi-res logo, so it's sharper on high-DPI displays

--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -6,6 +6,7 @@ header {
 
   h1 {
     background: asset-url('logo.png') 0 0 no-repeat;
+    background-size: contain;
     display: inline-block;
     height: 54px;
     overflow: hidden;
