(feature) Optional rather than required fields are marked
Simple Form defaults to marking required fields with an asterisk,
whereas GOVUK (and others) recommend marking optional fields instead.

The fix is heavily inspired by this blog post:
https://jeremysmith.co/posts/2015-12-03-how-to-mark-optional-form-fields-with-simple-form/

--- a/app/assets/stylesheets/components/forms.scss
+++ b/app/assets/stylesheets/components/forms.scss
@@ -6,6 +6,11 @@
   @extend .multiple-choice;
 }
 
+label span.optional {
+  color: $hackney-dark-grey;
+  font-size: 0.8em;
+}
+
 textarea {
   @extend .form-control;
 
