(refactor) default to index for address search
...instead of new

All the question pages have index as their main action - this has the
advantage of being the same route as the create/submit action.

The main reason for doing this is to allow us to handle 'back' links in
a consistent way.

--- a/app/views/address_searches/create.html.haml
+++ b/app/views/address_searches/create.html.haml
@@ -9,7 +9,7 @@
   %br/
   %strong
     = @address_search.postcode.upcase
-  = link_to t('address_search.change'), new_address_search_path
+  = link_to t('address_search.change'), address_search_path
 
 - if @address_search_results
   #address-search-results
