(chore) Correct classes applied by SimpleForm to errors
This allows invalid form elements to get the correct styling from the
GOVUK toolkit.

Also, defaulted buttons to have the class of `button` to save typing!

--- a/app/assets/stylesheets/components/forms.scss
+++ b/app/assets/stylesheets/components/forms.scss
@@ -29,3 +29,8 @@ input.string {
     background-color: $hackney-light-green;
   }
 }
+
+// Hide bullet points in error summaries
+ul.error-summary-list {
+  list-style-type: none;
+}
