(refactor) use the Back presenter in views

--- a/app/views/contact_details/index.html.haml
+++ b/app/views/contact_details/index.html.haml
@@ -14,4 +14,4 @@
 %aside#progress
   = @selected_answers['short_address']
 
-%p= link_to 'Back to address search', address_search_path
+%p= @back.link
