--- a/app/views/describe_repair/index.html.haml
+++ b/app/views/describe_repair/index.html.haml
@@ -14,4 +14,4 @@
       = f.input :description, as: :text
       = f.button :submit, class: 'button'
 
-%p= link_to 'Back to start', questions_start_path
+%p= @back.link
