--- a/app/views/contact_details/index.html.haml
+++ b/app/views/contact_details/index.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for :dummy_form, url: request.fullpath do |f|
+= simple_form_for @form, url: request.fullpath do |f|
   %fieldset
     %legend.question
       %h1= t('contact-details.title')
@@ -8,8 +8,8 @@
     .answers
       = f.input :full_name
       = f.input :telephone_number
-      = f.input :callback_time, collection: [:morning, :afternoon], as: :check_boxes
-      = f.button :submit, class: 'button'
+      = f.input :callback_time, collection: [:morning, :afternoon], as: :check_boxes, include_hidden: false
+      = f.button :submit
 
 %aside#progress
   = @selected_answers['short_address']
