(feature) Display selected address on confirmation
- Pass one object to the view - most of what it displays will come from
  the selected answers.
- build this object with a hash. An alternative would be to pass a
  SelectedAnswerStore instance, or even just the session. Not sure where
  the knowledge about where the answers live should lie.
- stub property search to return postcode in other specs: this is that
  that those specs will fail correctly when validations _don't_ work: we
  want the failure to be that error isn't showing (because the
  confirmation page was loaded) rather than that the confirmation page
  blew up because it didn't have the data it needed (in this case:
  postcode)

--- a/app/views/confirmations/show.html.haml
+++ b/app/views/confirmations/show.html.haml
@@ -37,7 +37,9 @@
     %h3 Your details
     %p Name: John Smith
     %p Phone: 01234 567 890
-    %p Address: Flat 1, 8 Hoxton Square, N1 6NU
+    %p
+      Address:
+      = @confirmation.address
 
     %h3 Callback time
     %p Time: afternoon, 12pm - 5pm
