(fix) Optional form fields need to have labels
Now that optional fields are suffixed with '(optional)', those fields
need to have labels.

--- a/app/views/address_searches/create.html.haml
+++ b/app/views/address_searches/create.html.haml
@@ -21,7 +21,7 @@
             collection: @address_search_results,
             label_method: :short_address,
             value_method: :property_reference,
-            label: false
+            required: true
 
           = f.input :property_reference,
             as: :radio_buttons,
