--- a/app/views/describe_repair/index.html.haml
+++ b/app/views/describe_repair/index.html.haml
@@ -11,5 +11,5 @@
         %li how does it impact your household?
 
     .answers
-      = f.input :description, as: :text, label: false
+      = f.input :description, as: :text
       = f.button :submit, class: 'button'
