--- a/app/views/questions/start/index.html.haml
+++ b/app/views/questions/start/index.html.haml
@@ -14,5 +14,5 @@
         %li I cannot access my property
 
     .answers
-      = f.input :priority_repair, collection: [:yes, :no], as: :radio_buttons, label: ''
+      = f.input :priority_repair, collection: [:yes, :no], as: :radio_buttons, label: false
       = f.button :submit, class: 'button'
