(spec) Check all summary data vs hardcoded values
This will let us refactor in preparation for the next steps:
- Remove 'Type' For now - this isn't implemented

--- a/app/views/confirmations/show.html.haml
+++ b/app/views/confirmations/show.html.haml
@@ -31,7 +31,6 @@
     %h2 Summary
 
     %h3 Problem
-    %p Type: Blocked bath
     %p Description: The bath won't drain
 
     %h3 Your details
@@ -42,5 +41,5 @@
       = @confirmation.address
 
     %h3 Callback time
-    %p Time: afternoon, 12pm - 5pm
+    %p Time: afternoon (12pm - 5pm)
 
