--- a/app/views/describe_repair/index.html.haml
+++ b/app/views/describe_repair/index.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for :dummy_form, url: request.fullpath do |f|
+= simple_form_for @form, url: request.fullpath do |f|
   %fieldset
     %legend.question
       %h1 Is there anything else we should know about this problem?
