(feature) repair description is stored in answers
I don't think this warrants a separate object like ContactDetailsSaver
at this point, but when this has validations (e.g. description length)
then we can create one at that point

--- a/app/views/confirmations/show.html.haml
+++ b/app/views/confirmations/show.html.haml
@@ -31,7 +31,7 @@
     %h2 Summary
 
     %h3 Problem
-    %p= t('confirmation.summary.description', description: "The bath won't drain")
+    %p= t('confirmation.summary.description', description: @confirmation.description)
 
     %h3 Your details
     %p= t('confirmation.summary.name', name: @confirmation.full_name)
