(refactor) Change 'time' to 'callback_time'
In future we'll have appointment times as well, so it's good to be clear
what we're talking about

--- a/app/views/confirmations/show.html.haml
+++ b/app/views/confirmations/show.html.haml
@@ -39,5 +39,5 @@
     %p= t('confirmation.summary.address', address: @confirmation.address)
 
     %h3 Callback time
-    %p= t('confirmation.summary.time', time: @confirmation.callback_time)
+    %p= t('confirmation.summary.callback_time', callback_time: @confirmation.callback_time)
 
