(fix) Full name is shown in confirmation title
Missed this on the initial pass through

--- a/app/views/confirmations/show.html.haml
+++ b/app/views/confirmations/show.html.haml
@@ -1,7 +1,8 @@
 .grid-row
   .column-two-thirds
     %h1
-      Thank you John Smith
+      Thank you
+      = @confirmation.full_name
 
     %p
       Your repair request has been successfully submitted.
