(feature) Question shows its answers as radio buttons

--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -3,3 +3,8 @@
     %legend.question
       %h1= @question.title
 
+    .answers
+      = f.input :answer, collection: @question.answers_for_collection, as: :radio_buttons, label: false
+      = f.button :submit, class: 'button'
+
+
