(feature) Callback time in confirmation body
It was previously only in the summary.

Changed the wording so that it makes sense in both contexts.

Using 'in the morning (8am - 12pm)' would be tricky, because of the all
day case: 'in the all day...' doesn't work, and 'Callback time: in the
morning ...' feels odd as well.

Decided against moving to locales at the moment: feels fiddly and we
have bigger fish to fry. Main thing for me right now is that the strings
aren't hardcoded into the view.

--- a/app/views/confirmations/show.html.haml
+++ b/app/views/confirmations/show.html.haml
@@ -1,5 +1,5 @@
 .grid-row
-  .column-two-thirds
+  %section#confirmation.column-two-thirds
     %h1
       Thank you
       = @confirmation.full_name
@@ -14,7 +14,7 @@
 
     %p
       We will call you within one working day, between
-      %strong 12pm and 5pm
+      %strong= @confirmation.callback_time
       to arrange a repair appointment.
 
     %p
@@ -28,7 +28,7 @@
       We are open Monday to Friday 8am - 7pm and Saturdays 9am - 1pm.
 
 .grid-row
-  .column-two-thirds
+  %section#summary.column-two-thirds
     %h2 Summary
 
     %h3 Problem
