--- a/app/views/pages/address_isnt_here.html.haml
+++ b/app/views/pages/address_isnt_here.html.haml
@@ -12,4 +12,5 @@
 %p
   We are open Monday to Friday 8am - 7pm and Saturdays 9am - 1pm.
 
-%p= @back.link
+%p
+  = link_to t('back_links.prefix', page_description: t('back_links.address_searches')), :back
