--- a/app/views/pages/emergency_contact.html.haml
+++ b/app/views/pages/emergency_contact.html.haml
@@ -7,4 +7,5 @@
 %p
   Please call us on 020 8356 2300 so we can help you with your problem.
 
-%p= @back.link
+%p
+  = link_to t('back_links.prefix', page_description: t('back_links.previous')), :back
