(feature) Questions can also request text input
If a question has no answers, we render a textarea, for example when
requesting a description of the fault.

--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -4,7 +4,11 @@
       %h1= @question.title
 
     .answers
-      = f.input :answer, collection: @question.answers_for_collection, as: :radio_buttons, label: false
+      - if @question.multiple_choice?
+        = f.input :answer, collection: @question.answers_for_collection, as: :radio_buttons, label: false
+      - else
+        = f.input :answer, as: :text, label: false
+
       = f.button :submit, class: 'button'
 
 
