--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for :form, url: request.fullpath do |f|
+= simple_form_for @form, url: request.fullpath do |f|
   %fieldset
     %legend.question
       %h1= @question.title
