--- a/app/views/pages/repair_your_responsibility.html.haml
+++ b/app/views/pages/repair_your_responsibility.html.haml
@@ -1,2 +1,5 @@
 %h1
   You are responsible for repairing this problem
+
+%p
+  Hackney Council is not responsible for repairing anything that you fitted yourself.
