(chore) Copy updates to describe repair form and home page

--- a/app/views/describe_repair/index.html.haml
+++ b/app/views/describe_repair/index.html.haml
@@ -1,13 +1,12 @@
 = simple_form_for @form, url: request.fullpath do |f|
   %fieldset
     %legend.question
-      %h1 Is there anything else we should know about this problem?
+      %h1 Is there anything else we should know?
 
       %p
         For example:
 
       %ul
-        %li which rooms are affected?
         %li how does it impact your household?
 
     .answers
