--- a/app/views/start/index.html.haml
+++ b/app/views/start/index.html.haml
@@ -2,13 +2,13 @@
   Report a repair
 
 %p.lede
-  We provide housing and communal grounds repairs for our tenants.
+  We provide housing and communal area repairs for our tenants.
 
 %p
   You can use this online service to report the most common problems with your home.</p>
 
 %p
-  Requesting a repair should take around 5 minutes.
+  Reporting a repair should take around 5 minutes.
 
 %p
   %a.button.button-start{ href: '/questions/start/' } Start
