(refactor) move gas notice above start button
Based on user feedback: They didn't see the gas message when it was
below the Start button. The idea here is that by putting it above, but
not making it more prominent then it will get read without detracting
from the main call-to-action.

Changed from a %div to a %p to ensure that there's the correct amount of
padding between this notice and the button.

Removed 'aside' since I'm not sure we're thinking of this as an aside
anymore.

--- a/app/views/pages/start.html.haml
+++ b/app/views/pages/start.html.haml
@@ -10,15 +10,16 @@
 %p
   Reporting a repair should take around 5 minutes.
 
+%p.notice
+  %i.icon.icon-important
+  %strong.bold-small
+    If you can smell gas, please call National Gas Emergency on:
+    %br/
+    %span{ itemprop: 'telephone' }
+      %a{ href: 'tel:0800111999' }
+        0800 111 999
+
 %p
   %a.button.button-start{ href: '/questions/start/' } Start
 
 %aside
-  %div.notice
-    %i.icon.icon-important
-    %strong.bold-small
-      If you can smell gas, please call National Gas Emergency on:
-      %br/
-      %span{ itemprop: 'telephone' }
-        %a{ href: 'tel:0800111999' }
-          0800 111 999
