--- a/app/views/pages/emergency_contact.html.haml
+++ b/app/views/pages/emergency_contact.html.haml
@@ -8,4 +8,4 @@
   Please call us on 020 8356 2300 so we can help you with your problem.
 
 %p
-  = link_to t('back_links.prefix', page_description: t('back_links.previous')), :back
+  = link_to t('back_link'), :back
