(chore) Update start page copy

--- a/app/views/pages/start.html.haml
+++ b/app/views/pages/start.html.haml
@@ -2,17 +2,26 @@
   Report a repair
 
 %p.lede
-  We provide housing and communal area repairs for our tenants.
+  We provide housing and communal area repairs for our Hackney residents.
 
 %p
-  You can use this online service to report the most common problems with your home.</p>
+  You can use this service to:
+
+%ul
+  %li
+    report the most common problems with your home
+  %li
+    learn how to solve common repair types with how-to videos
 
 %p
   Reporting a repair should take around 5 minutes.
 
 %p.notice
   %i.icon.icon-important
-  %strong.bold-small
+    %span.visually-hidden
+      Important
+
+  %strong
     If you can smell gas, please call National Gas Emergency on:
     %br/
     %span{ itemprop: 'telephone' }
@@ -22,4 +31,13 @@
 %p
   %a.button.button-start{ href: '/questions/start/' } Start
 
-%aside
+%h2
+  Before you start
+
+%p
+  You are responsible for any home improvements you have carried out yourself.
+
+%p
+  If your home is managed by a
+  %abbr{ title: 'Tenant Management Organisation' } TMO
+  please contact them first for help with repairs.
