(chore) Increase list bottom margin and add <abbr> styling

--- a/app/assets/stylesheets/components/main.scss
+++ b/app/assets/stylesheets/components/main.scss
@@ -30,10 +30,16 @@ main {
   ul {
     list-style-type: disc;
     padding-left: 20px;
+    margin-bottom: 1em;
 
     li {
       margin-bottom: 0.5em;
     }
+  }
+
+  abbr[title] {
+    cursor: help;
+    text-decoration: underline dotted;
   }
 
   .box-highlight {
