(chore) Add guidance around changing a lightbulb
Replace the 'Have you changed your lightbulb?' question, with a page
featuring an embedded YouTube video.

Clicking 'continue' takes the user to the 'describe repair' page.

--- a/app/assets/stylesheets/components/main.scss
+++ b/app/assets/stylesheets/components/main.scss
@@ -37,6 +37,10 @@ main {
     }
   }
 
+  iframe {
+    padding-bottom: 2em;
+  }
+
   abbr[title] {
     cursor: help;
     text-decoration: underline dotted;
