(chore) Typography fixes
 - Fix use of Droid Sans in the font stack. It was being loaded, but
   overriden by the (unavailable) GOVUK font 'GDS Transport'
 - Increase font size of headings
 - Increase line height of paragraphs, to increase readability

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -5,4 +5,4 @@ $hackney-dark-grey: #252525;
 
 $white: #fff;
 
-$font-stack: 'Droid Sans', arial, helvetica, sans-serif;
+$toolkit-font-stack: 'Droid Sans', arial, helvetica, sans-serif;
