--- a/app/assets/stylesheets/components/main.scss
+++ b/app/assets/stylesheets/components/main.scss
@@ -11,20 +11,30 @@ main {
   }
 
   h1 {
-    @include heading-36;
+    @include heading-48;
 
     color: $hackney-green;
     font-weight: bold;
+    letter-spacing: -1px;
   }
 
   h2 {
-    @include heading-24;
+    @include heading-27;
 
     font-weight: bold;
+    letter-spacing: -1px;
   }
 
   h3 {
     font-weight: bold;
+  }
+
+  p {
+    line-height: 1.5em;
+  }
+
+  ul, ol, .panel, .notice {
+    margin: $gutter 0;
   }
 
   ul {
