--- a/app/assets/stylesheets/hackney.scss
+++ b/app/assets/stylesheets/hackney.scss
@@ -41,9 +41,9 @@ html {
 
 body {
   background-color: $hackney-dark-grey;
-  font-family: $font-stack;
   margin: 0;
   padding: 0;
+  text-rendering: optimizeLegibility;
 }
 
 .wrapper {
