(chore) Add "style guide" page with example styling
This is mainly here to preview the various styles used across the site
in one place for quick reference.

Also, included the missing `panels` component.

--- a/app/assets/stylesheets/hackney.scss
+++ b/app/assets/stylesheets/hackney.scss
@@ -28,6 +28,7 @@
 @import 'elements/breadcrumbs';
 @import 'elements/phase-banner';
 @import 'elements/components';
+@import 'elements/panels';
 
 /* Include our components */
 @import 'components/header';
