--- a/app/assets/stylesheets/components/forms.scss
+++ b/app/assets/stylesheets/components/forms.scss
@@ -27,6 +27,10 @@ input.string {
   background-color: $hackney-green;
   margin-bottom: $gutter-half;
 
+  &:visited {
+    background-color: $hackney-green;
+  }
+
   &:hover, &:focus {
     background-color: $hackney-light-green;
   }
