(refactor) Rename address search to ...form
Intermediate step: I want to extract a Facade called @address_search

--- a/app/views/address_searches/index.html.haml
+++ b/app/views/address_searches/index.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for @address_search, url: address_search_path do |f|
+= simple_form_for @address_search, as: :address_search, url: address_search_path do |f|
   %fieldset
     %legend.question
       %h1
