(refactor) AddressSearch facade
The Addresses controller is getting too long - we need to extract
something to deal with that.

This is the 'pass one object to the view' approach from Thoughtbot in
response to Sandi Metz's rules:

https://robots.thoughtbot.com/sandi-metz-rules-for-developers#only-instantiate-one-object-in-the-controller

One advantage is that we initialise all the objects required by the page
in one place, so we can create the same object when a validation error
occurs and we don't have to worry about keeping things in sync.

The downside is that it becomes a bit more obtuse: the objects passed to
the view are one step removed than they usually are.

--- a/app/views/address_searches/create.html.haml
+++ b/app/views/address_searches/create.html.haml
@@ -1,26 +1,23 @@
 %h1
   What is your address?
 
-- if @address_search.errors
-  = @address_search.errors.full_messages.join(', ')
-
 %p.form-label
   Postcode
   %br/
   %strong
-    = @address_search.postcode.upcase
+    = @address_search.form.postcode.upcase
   = link_to t('address_search.change'), address_search_path
 
-- if @address_search_results
+- if @address_search.results
   #address-search-results
     = simple_form_for @form, url: address_path do |f|
-      = f.hidden_field :postcode, value: @address_search.postcode
+      = f.hidden_field :postcode, value: @address_search.form.postcode
 
-      - if @address_search_results.any?
+      - if @address_search.results.any?
         %fieldset
           = f.input :property_reference,
             as: :radio_buttons,
-            collection: @address_search_results,
+            collection: @address_search.results,
             label_method: :short_address,
             value_method: :property_reference,
             required: true
@@ -39,4 +36,4 @@
 
       = f.button :submit, class: 'button'
 
-%p= @back.link
+%p= @address_search.back_link
