--- a/app/assets/stylesheets/components/main.scss
+++ b/app/assets/stylesheets/components/main.scss
@@ -71,5 +71,9 @@ main {
     background-color: $hackney-green;
     text-align: center;
   }
-}
 
+  .link-back {
+    margin-top: 0;
+    margin-bottom: $gutter;
+  }
+}
