--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,7 +13,7 @@
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
 
-
+    = render partial: 'analytics/google'
 
   %body
     %header
