--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,7 @@
     = javascript_include_tag 'application'
 
     = render partial: 'analytics/google'
+    = render partial: 'analytics/hotjar'
 
   %body
     %header
