(feature) Allow user to pick from a list of available appointments
The routes in the Rails app for appointments now reference the
`repair_request_reference` rather than the `work_order_reference`. This
is because we can always use the API to fetch the latter with the
former, but not the other way around.

I've reused the `Repair` class to extract the references from the
response from the API.

--- a/app/views/appointments/show.html.haml
+++ b/app/views/appointments/show.html.haml
@@ -1,3 +1,9 @@
-= simple_form_for :dummy_form, url: request.fullpath do |f|
-  = f.input :answer, collection: @appointments.slots_for_collection, as: :radio_buttons, label: false
-  = f.button :submit, 'Book this appointment', class: 'button'
+= simple_form_for @form, url: request.fullpath do |f|
+  %fieldset
+    %legend.question
+      %h1
+        Please choose a date and time that suits you
+
+    .answers
+      = f.input :appointment_id, collection: @appointments, label_method: :description, as: :radio_buttons, label: false
+      = f.button :submit, class: 'button'
