--- a/app/views/describe_repair/index.html.haml
+++ b/app/views/describe_repair/index.html.haml
@@ -1,15 +1,9 @@
 = back_link
 
-= simple_form_for @form, url: request.fullpath do |f|
+= simple_form_for @form, as: :describe_repair_form, url: request.fullpath do |f|
   %fieldset
     %legend.question
-      %h1 Is there anything else we should know?
-
-      %p
-        For example:
-
-      %ul
-        %li how does it impact your household?
+      = render partial: @partial
 
     .answers
       = f.input :description, as: :text
