(feature) Describe form is required if no SOR code
Rather than using two different controllers, make the decision of
whether to make a repair form required or not based on the SOR code:

  - if we have an SOR code, we don't need any additional info, so make
    this optional
  - if we don't have an SOR code, this form is the only way we have of
    helping to diagnose the repair, so it should be required

Note that also previously we weren't saving the description in the
describe_repair_controller! That's an example of how these things can
get out of sync. Having one controller should help avoid that sort of
thing.

Note that we're now checking whether the DescribeRepairForm is valid,
even though it currently has no validations. That's fine: hopefully at
some point it will have some in any case - e.g. field length.

- Use a facade to hide all this from the controller
- In the facade we need to memoize the form: if we don't then each call
  to '#form' creates a new form instance, which isn't what we want when
  there are validation errors: instead we want the instance of the form
  which was mutated by `.valid?` so that we can display the errors from
  it

--- a/app/views/describe_repair/index.html.haml
+++ b/app/views/describe_repair/index.html.haml
@@ -1,9 +1,9 @@
 = back_link
 
-= simple_form_for @form, as: :describe_repair_form, url: request.fullpath do |f|
+= simple_form_for @describe_repair.form, as: :describe_repair_form, url: request.fullpath do |f|
   %fieldset
     %legend.question
-      = render partial: @partial
+      = render partial: @describe_repair.partial
 
     .answers
       = f.input :description, as: :text
