--- a/app/views/confirmations/show.html.haml
+++ b/app/views/confirmations/show.html.haml
@@ -19,6 +19,7 @@
     %h2 Summary
 
     %h3 Problem
+    %p= t('confirmation.summary.room', room: @confirmation.room)
     %p= t('confirmation.summary.description', description: @confirmation.description)
 
     %h3 Your details
