(fix) Don't display room for communal areas
We didn't have any specs for non-internal spaces. Not sure if this one
is good enough.

I don't like having a conditional in the view. Perhaps it would be
better to have a single 'location' field which either has the room,
Outside or Communal. That would get rid of the awkward repeated 'room'
key. Or maybe this is OK for now?

--- a/app/views/confirmations/show.html.haml
+++ b/app/views/confirmations/show.html.haml
@@ -19,7 +19,8 @@
     %h2 Summary
 
     %h3 Problem
-    %p= t('confirmation.summary.room', room: @confirmation.room)
+    - if @confirmation.room
+      %p= t('confirmation.summary.room', room: @confirmation.room)
     %p= t('confirmation.summary.description', description: @confirmation.description)
 
     %h3 Your details
