(feature) Show character limit using JS
Whenever JS encounters a <textarea> with its `maxlength` attribute set,
it will display the number of characters remaining underneath it.

To improve accessiblity, I've set the `aria-live` attribute to `polite`,
which should only announce "x characters remaining" when the user pauses
from typing, rather than on every keypress.

--- a/app/assets/stylesheets/components/forms.scss
+++ b/app/assets/stylesheets/components/forms.scss
@@ -40,3 +40,8 @@ input.string {
 ul.error-summary-list {
   list-style-type: none;
 }
+
+.character-limit {
+  margin-top: 0.5em;
+  text-align: right;
+}
