(chore) Rename `short_address` to `address`

--- a/app/views/address_searches/create.html.haml
+++ b/app/views/address_searches/create.html.haml
@@ -20,7 +20,7 @@
           = f.input :property_reference,
             as: :radio_buttons,
             collection: @address_search.results,
-            label_method: :short_address,
+            label_method: :address,
             value_method: :property_reference,
             required: true
 
