(fix) use 'to' instead of dashes in time ranges
As per the gov.uk style guide:
https://www.gov.uk/guidance/style-guide/a-to-z-of-gov-uk-style#times

> use ‘to’ in time ranges, not hyphens, en rules or em dashes:
> 10am to 11am (not 10-11am)

--- a/app/views/pages/address_isnt_here.html.haml
+++ b/app/views/pages/address_isnt_here.html.haml
@@ -12,4 +12,4 @@
   so we can help you with your problem.
 
 %p
-  We are open Monday to Friday 8am - 7pm and Saturdays 9am - 1pm.
+  We are open Monday to Friday 8am to 7pm and Saturdays 9am to 1pm.
