--- a/app/views/pages/start.html.haml
+++ b/app/views/pages/start.html.haml
@@ -45,10 +45,10 @@
 %p
   They are open
   %strong
-    Monday&ndash;Friday, 8am&ndash;7pm
+    Monday to Friday 8am to 7pm
   and
   %strong
-    Saturday, 9am&ndash;1pm
+    Saturday 9am to 1pm
 
 %h2
   Home improvements
