--- a/app/views/pages/emergency_contact.html.haml
+++ b/app/views/pages/emergency_contact.html.haml
@@ -16,7 +16,7 @@
     = succeed ',' do
       %span{ itemprop: 'telephone' }
         %a{ href: 'tel:02083562300' } 020 8356 2300
-    Monday - Friday, 8am - 7pm and Saturday, 9am - 1pm
+    Monday to Friday, 8am to 7pm and Saturday, 9am to 1pm
 
 %p
   Outside of these hours, we provide a
