--- a/app/views/pages/toilet_unblock_info.html.haml
+++ b/app/views/pages/toilet_unblock_info.html.haml
@@ -17,5 +17,5 @@
   Please call the repairs contact centre on
   %strong
     020 8356 2300
-  Monday&ndash;Friday 8am&ndash;7pm and
-  Saturday 9am&ndash;1pm.
+  Monday to Friday 8am to 7pm and
+  Saturday 9am to 1pm.
