(feature) Display an error page for API errors
- Separate out errors which are a result of failures connecting to the
API (ConnectionError), or with the response (StatusServerError), from
errors which are problems with the application config
(MissingPrivateKeyError). This lets us rescue from them separately.
- Use the same contact details partials as the other error page which is
shown when systems are down.

--- a/app/views/errors/service_disabled.html.haml
+++ b/app/views/errors/service_disabled.html.haml
@@ -1,45 +1,4 @@
 %h1
   Sorry! This service is temporarily unavailable.
 
-%p
-  %strong
-    Please phone our repairs contact centre on
-    = succeed '.' do
-      = repairs_contact_centre_telephone_number
-    We’re open Monday to Friday from 8am to midnight and on Saturday
-    from 9am to 1pm.
-
-%p
-  If you have an emergency repair outside of these hours, you should phone us on
-  = succeed '.' do
-    = repairs_emergency_telephone_number
-
-%p
-  Emergency repairs include:
-
-%ul
-  %li
-    flood, fire or explosion damage
-  %li
-    access to get back into your property for vulnerable tenants, however we
-    will charge you for doing this
-  %li
-    major plumbing and electrical faults resulting in large scale water loss
-    or power loss
-  %li
-    blocked toilet where it’s your only toilet
-
-%p
-  If your emergency relates to gas, electricity or water supply emergencies,
-  you should phone:
-
-%p
-  Electricity:
-  = electricity_emergency_telephone_number
-  %br/
-  Gas:
-  = gas_emergency_telephone_number
-  %br/
-  Water:
-  = water_emergency_telephone_number
-  %br/
+= render partial: 'errors/contact_phone_numbers'
