(chore) Restore 'check light bulb' question
Previously, if you answered "Have you checked the fusebox?" with "Yes"
you'd end up on the "How to replace a light bulb" page.

Now, you're asked an additional "Have you checked the light bulb?"
question, and answering "No" will show you the "How to replace a ligh
bulb" page instead.

Additionally, clicking 'continue' on the fusebox check page sends you to
the lightbulb check question, rather than sending you directly to the
custom "describe repair" page.

--- a/app/views/pages/check_fusebox.html.haml
+++ b/app/views/pages/check_fusebox.html.haml
@@ -23,7 +23,7 @@
   If you have any doubts, please contact us for guidance.
 
 %p
-  If you have checked the switch and the light is still not working, please
-  select continue to book an appointment
+  If you have checked the fusebox and the light is still not working, please
+  select continue.
 
-%p= link_to 'Continue', describe_repair_path, class: 'button'
+%p= link_to 'Continue', questions_path('light_check_bulb'), class: 'button'
