(chore) Additional question around damp/mould
There are separate SOR codes for damp and mould, so I needed to
add an additional question "Is your problem with damp or mould?"
in order to set the correct diagnosis.

--- a/app/views/describe_repair/_damp.html.haml
+++ b/app/views/describe_repair/_damp.html.haml
@@ -1,1 +1,16 @@
-%h1 Please give details of the damp or mould
+%h1
+  Let us know any additional details you think might help us
+
+%p
+  Please describe:
+
+%ul
+  %li
+    The exact location of the damp
+  %li
+    The rough size of the damp patch
+  %li
+    whether damp has formed in this area before
+  %li
+    whether there is any obvious damage to the external wall (if applicable)
+
