--- a/app/views/pages/damp_and_mould.html.haml
+++ b/app/views/pages/damp_and_mould.html.haml
@@ -1,19 +1,19 @@
 = back_link
 
 %h1
-  Damp & mould
+  Common fixes - damp and mould
 
 %h2
   How to tackle damp and mould in your home
 
 %p
-  Watch this brief video that provides guidance on dealing
+  Watch this short video for some advice on dealing
   with damp and mould problem areas in your home.
 
 %iframe{ width: '560', height: '315', src: 'https://www.youtube.com/embed/7nq71pGBGI8?rel=0&amp;showinfo=0', frameborder: '0', allowfullscreen: true }
 
 %p
-  Select continue if you would to progress with reporting this repair.
+  Select continue if you'd still like to report this repair.
 
-%p= link_to 'Continue', describe_repair_path(details: 'damp'), class: 'button'
+%p= link_to 'Continue', questions_path('damp_or_mould_problem'), class: 'button'
 
